--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
+
     <title>แนะนำตัวเอง | [Poramin Sudsanguan]</title>
     <style>
 
@@ -119,8 +122,8 @@
 <header>
     <h1>╭o┽𝙒𝙚𝙡𝙘𝙤𝙢𝙚 𝙩𝙤 𝙢𝙮 𝙬𝙚𝙗𝙨𝙞𝙩𝙚</h1>
 </header>
-<button class="btn btn-outline"> <a href="index.html">ᴡᴇᴅꜱɪᴛᴇ 1</a></button>
-<button class="btn btn-outline"> <a href="lol.html">ᴡᴇᴅꜱɪᴛᴇ 2</a></button>
+<button class="btn btn-info"><a href="Km.html">Project1</a></button>
+<button class="btn btn-active btn-secondary"><a href="lol.html">Project2</a></button>
 <div class="container">
     <!-- โปรไฟล์ -->
     <section class="profile">
